syntax="proto3";

option csharp_namespace = "AuctionService";

service GrpcAuction{
    rpc GetAuction (GetAuctionRequest) returns (GetAuctionResponse);
}

message GetAuctionRequest{
    string id = 1;
}

message AuctionModel {
    string id = 1;
    string seller = 2;
    string auctionEnd = 3;
    int32 reservePrice = 4;
}

message GetAuctionResponse {
    AuctionModel auction = 1;
}